# CureSuch

./: .gitignore  CMakeLists.txt  Element.h  HashTable.h  List.h  Node.h  Note.cpp  Note.h  Parser.cpp  Parser.h  Person.cpp  Person.h  Tree.h  addnote.cpp  addnote.h  addnote.ui  addseller.cpp  addseller.h  addseller.ui  debugwindow.cpp  debugwindow.h  debugwindow.ui  god.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  report.cpp  report.h  report.ui  resources.qrc  search.cpp  search.h  search.ui
